:construction: icons for when the match is a draw

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./node_modules/nes.css/css/nes.min.css" />
+    
     <!--  minify -->
     <link
       href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css"
@@ -20,10 +20,7 @@
       href="https://unpkg.com/nes.css/css/nes-core.min.css"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css?family=Press+Start+2P"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
 
     <meta name="theme-color" content="#000000" />
